--- a/gol.html
+++ b/gol.html
@@ -10,33 +10,34 @@
 <link rel="stylesheet" href="style/cashjs.css">
 <script>
 
-let world;
+let cash;
 
 function initialise()
 {
 
     let config = {
+            title: "Game of Life",
             maxtime: 10000,
-            ncol : 150,            
-            nrow : 150,		            // dimensions of the grid to build
+            ncol : 120,            
+            nrow : 120,		            // dimensions of the grid to build
             wrap : [true, true],        // Wrap boundary [COLS, ROWS]   
-            scale : 3,				    // scale of the grid (nxn pixels per CA cell)
+            scale : 4,				    // scale of the grid (nxn pixels per CA cell)
             statecolours: {'bg':0,'alive':1}
     }
 
-    world = new CashWorld(config)
+    cash = new Cash(config)
 
-    world.makeCA("gol");
+    cash.makeGrid("gol");
     
-    world.initialGlidergun(world.gol,'alive',3,3)    
-    //world.initialGrid(world.gol,'alive',0,1,0.5)    
+    cash.initialGlidergun(cash.gol,'alive',3,3)    
+    //cash.initialGrid(cash.gol,'alive',0,1,0.5)    
      
 
 
-    world.gol.nextState = function(i,j)       // Define the next-state function. This example is game of life
+    cash.gol.nextState = function(i,j)       // Define the next-state function. This example is game of life
     {   
         // Count living neighbours
-        let neighbours = world.gol.countMoore8(this,i,j,1,'alive')              // In the Moore8 neighbourhood of this CA count # of 1's for the 'alive' property        
+        let neighbours = cash.gol.countMoore8(this,i,j,1,'alive')              // In the Moore8 neighbourhood of this CA count # of 1's for the 'alive' property        
         // Get own state
         let state = this.grid[i][j].alive;            
         // Apply the three rules of GoL
@@ -49,7 +50,7 @@ function initialise()
         else
             this.grid[i][j].alive = state;
     }
-    world.gol.update = function(i,j)
+    cash.gol.update = function(i,j)
     {
         this.synchronous()
         this.display()
@@ -59,7 +60,7 @@ function initialise()
 function run()
 {
     initialise()
-    world.start()
+    cash.start()
 }
 
 </script>
@@ -67,10 +68,9 @@ function run()
 
 
 <body onload="run()">
-    <div class="header"><h2>CashJS - Game of Life</h2></div>
+    <div class="header" id="header"></div>
     <div class="content" id="canvas_holder">  </div>
     <div class="content" id="graph_holder"> </div>
-
-    <div class="footer"><h2>(CashJS - Links to repo etc here?)</h2></div>
+    <div class="footer" id="footer"></div>
 </body>
 </html>
