--- a/cheater.html
+++ b/cheater.html
@@ -10,7 +10,7 @@ let model;
 let X2Y =1.0;
 let Y2X =1.0;
 let Y2Z =1.5;
-let NON=0.0;
+let NON=1.0;
 let d=0.05;
 let mdif_interval = 5;
 let px, py, pz, psum;
@@ -24,9 +24,9 @@ function setup()
             ncol : 200,            
             nrow : 200,		                                        // dimensions of the grid to build
             seed : 56,
-            targetfps : 60,         
+            fps : 60,         
             fastmode: true,                                 
-            throttlefps : true,                                     // Note: FPS throttling only useful at low targetfps OR when display() is the time-limiting step  
+            throttlefps : false,                                     // Note: FPS throttling only useful at low targetfps OR when display() is the time-limiting step  
             wrap : [true, true],                                    // Wrap boundary [COLS, ROWS]
             scale : 2,				                                // scale of the grid (nxn pixels per CA cell)
             statecolours: {'bg':0,
@@ -78,7 +78,7 @@ function setup()
     {
         this.synchronous()
         this.plotPopsizes('species',[1,2,3]) 
-
+        //if(model.time%10==0)this.MargolusDiffusion()
         let sumX = 0
         let sumY = 0
         let sumZ = 0
