Added ODE basics (wip)

--- a/cheater.html
+++ b/cheater.html
@@ -1,8 +1,9 @@
 <html>
-<head><title> Cacatoo </title> </head>
-<script src="dist/cacatoo.js"></script> <script src="lib/dygraphs-combined-dev.js"></script> <script src="lib/fpsmeter.js"></script> <link rel="stylesheet" href="style/cacatoo.css">
-<script>
+<script src="dist/cacatoo.js"></script>                 <!-- Include cacatoo library (compiled with rollup) -->
+<script src="lib/all.js"></script>                      <!-- Include other libraries (concattenated in 1 file) -->
+<link rel="stylesheet" href="style/cacatoo.css">        <!-- Set style sheet -->
 
+<script>
 /*-----------------------Start user-defined code ---------------------*/
 
 let model;
