Changed the way colours are parsed (see examples)

--- a/gol.html
+++ b/gol.html
@@ -21,7 +21,7 @@ function setup()
             nrow : 170,		            // dimensions of the grid to build
             wrap : [true, true],        // Wrap boundary [COLS, ROWS]   
             scale : 2,				    // scale of the grid (nxn pixels per CA cell)
-            statecolours: {'alive':1}   // The background state '0' is never drawn
+            statecolours: {'alive':'white'}   // The background state '0' is never drawn
     }
 
     model = new Model(config)
