--- a/interacting_grids.html
+++ b/interacting_grids.html
@@ -14,12 +14,12 @@ function setup()
     let config = {
             title: "Interacting grids",
             maxtime: 10000,
-            ncol : 200,    
+            ncol : 100,    
             fastmode : true,        
-            nrow : 200,		            // dimensions of the grid to build
+            nrow : 100,		            // dimensions of the grid to build
             wrap : [true, true],        // Wrap boundary [COLS, ROWS]
             scale : 3,				    // scale of the grid (nxn pixels per CA cell)
-            statecolours: {'bg':0,'alive':{0:0,1:8},'left':{1:3,2:2}}
+            statecolours: {'alive':{0:'black',1:'#FF00AA'},'left':{1:'blue',2:'red'}}
             }
 
     model = new Model(config)
@@ -30,7 +30,7 @@ function setup()
     model.makeGrid("vote");
     model.initialGrid(model.vote,'left',2,1,0.5)        // Give each grid-point object a new property names 'val', with 50% 1, otherwise 0
 
-    model.gol.nextState = function(i,j)                 // Define the next-state function. This example is game of life
+    model.gol.nextState = function(i,j)                 // Define the next-state function. This example is game of life + vote
     {   
         // Count living neighbours
         let neighbours = model.gol.countMoore8(this,i,j,1,'alive')              // In the Moore8 neighbourhood of this CA count # of 1's for the 'alive' property        
