--- a/examples/cheater.html
+++ b/examples/cheater.html
@@ -21,7 +21,7 @@ function setup()
 
     let config = {  
             title: "<span style=\"padding:5px;border-radius: 8px 0px 8px 0px;background:#dddddd;color:red\">Mutualists</span> and <span style=\"color: blue\">Cheaters</span>",
-            maxtime: 100000000,
+            maxtime: 100,
             ncol : 200,            
             nrow : 200,		                                        // dimensions of the grid to build
             seed : 56,
@@ -30,7 +30,7 @@ function setup()
             throttlefps : false,                                     // Note: FPS throttling only useful at low targetfps OR when display() is the time-limiting step  
             wrap : [true, true],                                    // Wrap boundary [COLS, ROWS]
             scale : 2,				                                // scale of the grid (nxn pixels per CA cell)
-            statecolours: {'species':{0:"black",
+            statecolours: {'species':{0:"#000000",
                                       1:"#DDDDDD",
                                       2:"red",
                                       3:"blue"}}                 // Sets up colours of states. Here, die species state gets 4 colours. Can be a colour name or a hexadecimal colour. 
@@ -80,7 +80,7 @@ function setup()
     model.cheater.update = function()
     {
         this.synchronous()
-        this.plotPopsizes('species',[1,2,3]) 
+        this.plotPopsizes('species',[0,1,2,3]) 
         //if(model.time%10==0)this.MargolusDiffusion()
         let sumX = 0
         let sumY = 0
