--- a/examples/gol.html
+++ b/examples/gol.html
@@ -71,8 +71,7 @@ function setup()
 <body onload="setup()">        
     <div class="header" id="header"><h2>ModelJS - </h2></div>
     <div class="content" id="canvas_holder"></div>
-    <div class="content" id="form_holder">
-        <button onclick="model.toggle_play()"> Play / pause</button><br><br></div>    
+    <div class="content" id="form_holder"></div>
     <div class="content" id="graph_holder"> </div>
     <div class="footer" id="footer"></div>
 </body>
